--- a/VRChat/77/1334177.html
+++ b/VRChat/77/1334177.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "conFEY2ibA0MrE5LvObTT2rb2yDkA2tP3Y7juUKSlMg="></script>
+    "bC/pDXRHzA5bByadtoRHh4xLCmcC2J0J42SLKQE6YlQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"(無料配布)『三色帽章』","description":"フランス革命のシンボルでもある三色帽章の3Dモデルです。パパっと作ったものなので無料です。\n\n\n自作発言、他人を意図して不快にさせる使用、その他製作者が不快に感じた使用以外はすべてOKです。\n\n商用、再配布などもご自由にどうぞ。\n\n\n製作者 う゛(うがー)","url":"https://booth.pm/ja/items/1334177","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"0","highPrice":"100"},"image":"https://booth.pximg.net/c/620x620/2aaf8e6b-f522-4f3e-818f-90223f1e4947/i/1334177/33a40ba5-6600-4202-be23-6fd970630b27_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="conFEY2ibA0MrE5LvObTT2rb2yDkA2tP3Y7juUKSlMg="></script>
+    nonce="bC/pDXRHzA5bByadtoRHh4xLCmcC2J0J42SLKQE6YlQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -159,7 +161,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1334177/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
@@ -174,14 +176,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1334177/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               7
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
