--- a/VRChat/59/1287359.html
+++ b/VRChat/59/1287359.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "9mu//6Wqxsc14RXASPIB4Wd5Ms5kswTkVoeialkfaB4="></script>
+    "pA2Gq1MGf59e6DWwyK0CTS1U3Z276pLRIMCbwuiiSoc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"アリスニーソックス２色｜#VRoid","description":"ニーソックスの２色です！\n\n特典版にはモノクロベースの色変更用PSDデータが付属します。\nレース、白、黒の３レイヤーに分かれています。\n\nお着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。\nTwitter: https://twitter.com/yui_noe","url":"https://booth.pm/ja/items/1287359","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"400","highPrice":"900"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1287359/f155e78a-404e-40d9-993c-e1993fa60829_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="9mu//6Wqxsc14RXASPIB4Wd5Ms5kswTkVoeialkfaB4="></script>
+    nonce="pA2Gq1MGf59e6DWwyK0CTS1U3Z276pLRIMCbwuiiSoc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1287359/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               119
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1287359/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               119
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
