--- a/VRChat/31/1279131.html
+++ b/VRChat/31/1279131.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "iRKZ2PsQ7NWHuVxNBrhxoIYKYex/ubF0BpCHJUHWW2o="></script>
+    "tNtv+OPracFGpBgr7evgQaYheZ79gu85ipIX6AAwDNU="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"ペールネイル｜#VRoid","description":"爪先は派手にはしたくないけれど何もないのはなんだか寂しい。\nそんなアナタに控えめながらもしっかりとアピールができるペールトーンの５色のネイルセットです。\n\n1枚のファイルをインポートするだけで手と足の両方がネイルされます！\n\n特典版はPSDデータとおまけネイルが付属します。\nPSDデータはツヤレイヤーと5色のレイヤーにわかれています。\n\nお着替えした姿を投稿するときは@yui_noe宛にリプライやタグ付けをしてくださると嬉しいです。\nTwitter: https://twitter.com/yui_noe","url":"https://booth.pm/ja/items/1279131","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"100","highPrice":"300"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1279131/535d60c8-ba59-4721-a629-2a5ad629620e_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="iRKZ2PsQ7NWHuVxNBrhxoIYKYex/ubF0BpCHJUHWW2o="></script>
+    nonce="tNtv+OPracFGpBgr7evgQaYheZ79gu85ipIX6AAwDNU="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,7 +164,7 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1279131/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1279131/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
                               56
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
