--- a/VRChat/14/1273314.html
+++ b/VRChat/14/1273314.html
@@ -75,9 +75,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "S6J3nFFOA+lxQNSkEYPa/OEdJo7i2jDJnHNcJaJnzAE="></script>
+    "aJ2WAtHcEm1DGYmVfoSWV7DLeAAz8SyBqmfCw1vIV2w="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"メイドワンピース｜#VRoid","description":"全2種類のメイドワンピースのデータです。\nメイドの醍醐味と言えるエプロンの肩のフリルを再現しました。\nまたエプロンの形にもこだわっております。\nVRChatなどで使用できるエミッション用マスクデータも同梱しています。\n\nVRoid Studioのワンピース（長袖）に使用する想定で製作しています。\n\nハイネック用の色違いのリボンを別途購入いただけます。\n『メイドの夏制服』の通常版には白いリボンがありますが、同一サイズのためリボンの色変えにハイネックのみを購入する必要はありません。\nメイドリボン21色\nhttps://yui-noe.booth.pm/items/1273562","url":"https://booth.pm/ja/items/1273314","offers":{"priceCurrency":"JPY","@type":"AggregateOffer","lowPrice":"2000","highPrice":"2500"},"image":"https://booth.pximg.net/c/620x620/58c3a4b7-3cf8-4d35-b645-655d8f4315aa/i/1273314/40cb3700-f398-445a-8193-b17e61a30165_base_resized.jpg"}
     </script>
@@ -91,7 +91,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="S6J3nFFOA+lxQNSkEYPa/OEdJo7i2jDJnHNcJaJnzAE="></script>
+    nonce="aJ2WAtHcEm1DGYmVfoSWV7DLeAAz8SyBqmfCw1vIV2w="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -115,6 +115,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -162,10 +164,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1273314/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              288
+                              289
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -177,14 +179,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1273314/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              288
+                              289
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
