--- a/VRChat/76/1061176.html
+++ b/VRChat/76/1061176.html
@@ -100,9 +100,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/fb659a8225f82fcde9b8.js" defer=
+    "https://asset.booth.pm/assets/39c7779328e45f19f660.js" defer=
     "defer" nonce=
-    "XS75b1viQVPVEcJgJRtDTsLfAsCz5ZLYKFl9XkgjvJU="></script>
+    "iR8BLw/Oa8ZFL3vC4yEAcbfia/MlveOf2MycYbVnR9s="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"チョコレート菓子『Lucky』","description":"◆使用者の声\n『○ッキーゲームが出来てよかった！！』\n『あの子のもぐもぐする仕草がすごく可愛い！！』\n\n◆ 解説\n\n味も見た目もハイクオリティなチョコレート菓子モデルです。\nそれなりのポリゴン数を誇っているので、\nアニメーションオーバーライドでの使用を推奨します。\n\nポリゴン数が程々に多いので、\n至近距離で見てもガビガビにならず\nしっかりと相手に集中できると思います。\n\nみんなでシェアして食べてください。\nモデルデータのシェア（無許可配布）は厳禁ですよ？\n\n箱とか袋がオマケに付いてきます。\n学校ワールドや自宅ワールドの添え物にどうぞ。\n\n他にも素敵なお菓子のオマケ付き。\n\n\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n　　　　利用規約\n＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝＝\n\nポリゴン数\n\t菓子本体 ： 618△\n\t一式\t ： 18622△\n\n◆ 利用について\n当モデルデータに付属しているデータの改変は自由です。\n本素材に関しては、営利、非営利を問わず\nゲーム、映像作品、動画配信等にご利用いただけます。\n※ Unreal Engine 4, MMD等ソフトウェア問わずご利用いただけます。\n\n◆ 禁止\n公序良俗に反する行為や目的、政治、宗教活動、他者に対する誹謗中傷目的での利用を禁止します。\nまた、当モデルデータに付属しているデータの再配布、販売は改変の有無を問わず禁止します\n\n◆ 免責事項\n当モデルを利用することで発生したトラブルや損失、損害に対して、製作者は一切責任を負いません。当モデルを使用する際は利用者の責任において行ってください。\n\n(c) 2018 unois All Rights Reserved.\n\n","url":"https://booth.pm/ja/items/1061176","offers":{"priceCurrency":"JPY","@type":"Offer","price":"300"},"image":"https://booth.pximg.net/c/620x620/c7999e42-deba-47e7-bf43-8f75c3fca7bc/i/1061176/003d61ac-06f1-455c-aab2-09fe34d19202_base_resized.jpg"}
     </script>
@@ -113,7 +113,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="XS75b1viQVPVEcJgJRtDTsLfAsCz5ZLYKFl9XkgjvJU="></script>
+    nonce="iR8BLw/Oa8ZFL3vC4yEAcbfia/MlveOf2MycYbVnR9s="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -137,6 +137,8 @@
               <div class=
               "market-item-detail-article u-d-flex u-flex-column u-pb-400 u-align-items-center">
                 <div class="container">
+                  <div class=
+                  "market-item-detail__exhibition-banner"></div>
                   <div id="js-item-order"></div>
                   <div class="u-pt-600 u-d-flex">
                     <div class=
@@ -180,10 +182,10 @@
                           rel="nofollow" data-method="post" href=
                           "https://booth.pm/items/1061176/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              343
+                              345
                             </div>
                           </div></a><a class=
                           "remove-from-wish-list no-underline !text-current"
@@ -195,14 +197,13 @@
                           data-method="delete" href=
                           "https://booth.pm/items/1061176/wish_list">
                           <div class=
-                          "border-2 border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
+                          "border border-border300 box-border flex gap-4 h-[48px] items-center px-16 rounded-24 text-subtext-gray600 shop__border shop__text">
                             <div class=
                             "typography-14 preserve-half-leading wishlists_count">
-                              343
+                              345
                             </div>
                           </div></a>
                         </div>
-                        <div class="empty:hidden my-16"></div>
                         <div>
                           <ul class=
                           "variations u-mt-300 u-border-b" id=
